imperial incident - empire embargoed and ostemeria formable

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -300,6 +300,7 @@
  SWORE_FEALTY: "Swore Fealty"
  saelian.9.b: "We shall forge our own path."
  prince_rejected_kingship: "Repressed Ambitions"
+ desc_prince_rejected_kingship: "The is unsuccessfuly trying to contain our growing power."
 
  edict_pro_unitate_title: "Edict Pro Unitate"
  edict_pro_unitate_desc: "Also known as 'Pro unitate nostrae communitatis Saelianae et prosperitatem aeternam omnibus hominibus terrenis' was a major component of keeping religious unity in the empire throughout the XVI and XVII centuries."
@@ -918,3 +919,47 @@
  estate_nobles_noble_cities: "Urban Serfdom"
  estate_nobles_noble_cities_desc: "The status of the urban population of the empire is now not so different from the peasantry, greatly strengthening the nobles."
  increase_peasant_rebels_spawn_tt: "Greatly Increases the chances of peasant rebels."
+
+ decision_embargo_the_ostemers_title: "Embargo the Ostemer merchants"
+ decision_embargo_the_ostemers_desc: "For far too long the Silvestrian domianted the Ostsee. We will finally show the empire that it can no longer maintain its monopoly over the regional trade."
+ decision_embargo_the_ostemers_tt: "This may lead to a full-blown war against the Empire!"
+ incident_empire_embargoed: "Embargo on the Empire Embargo"
+ incident_empire_unembargoed: "Unified Merchant Guild"
+ incident_empire_embargoed_uno_reverse: "Imperial Embargo"
+
+ incident_ostemer_embargo: "Embargo on the Empire"
+ incident_ostemer_embargo_member_alert: "[incident_embargoer.GetAdjective] has called for an embargo on all imperial merchants, making it increasingly difficult to transfer goods across the Ostsee."
+ incident_ostemer_embargo_emperor_alert: "[incident_embargoer.GetAdjective] has called for an embargo on all imperial merchants, making it increasingly difficult to transfer goods across the Ostsee."
+ SE_incident.400.t: "[incident_embargoer.GetAdjective] Embargo"
+ SE_incident.400.desc: "incident_embargoer.GetAdjective] has called for an embargo on all imperial merchants, making it increasingly difficult to transfer goods across the Ostsee."
+ SE_incident.400.a: "They will pay for this."
+ SE_incident.400.a_tt: "Winning this war will grant us §Y10§! Imperial Influence and §Y10§! Power Projection."
+ SE_incident.400.b: "Our guilds have to unite if they want to surive."
+ SE_incident.400.c: "There is nothing we can do."
+ incident_refused_to_help: "Refused to Help"
+ ostsee_embargo_mod: "Lack of Resources"
+ desc_ostsee_embargo_mod: "We can't effectively import resources from abroad due to the embargo against the empire."
+
+ SEIDENPRINZ: "Seidenprinz"
+ SEIDENPRINZESSIN: "Seidenprinzessin"
+
+ ostemeria_ideas: "Ostemerian Ideas"
+ ostemeria_ideas_bonus: "Ostemerian Ambition"
+ ostemeria_ideas_start: "Ostemerian Traditions"
+ ostemeria_merchants_united: "Merchants United"
+ ostemeria_merchants_united_desc: "Throughout most of the Ostemerian history, our merchants were only loosely organized into two most important trading guilds - the Oelssner Guild based in Dorschau and the Skenstein Guild based in Orienfort, both together forming the Ostemer League. Despite most, if not all, merchants being part of this institution, they still were often competing with each other. With the unification of the Ostemer states, now many merchants are state mandated and economicaly encouraged to cooperate."
+ ostemeria_stewards_of_the_imperial_fleet: "Stewards of the Imperial Fleet"
+ ostemeria_stewards_of_the_imperial_fleet_desc: "The Imperial fleet was founded by emperor Heinrich V in the sixteenth century to combat the growing threat of Bogilish and Marstonian domination over the trade in the eastern sea after the merchant's assembly. Large amounts of funds were diverted and large swats of forests were cut down to create the largest fleet that Ostsee has ever seen."
+ ostemeria_ostemerian_mannerism: "Ostemertian Mannerism"
+ ostemeria_ostemerian_mannerism_desc: "While the early renaissance could freely develop in Camaria, Nifthem and Vetica, it was in Ostemeria that it reached its maturity. Wealthy merchants and burghers were willing to spend large quantities of money to comission greatest of Mysentrian artists, allowing them to perfect their craftsmanship building detailed and anatomically detailed statues which decorate the various palaces and trading halls of the eastern Saelian coast."
+ ostemeria_marstonien_handelsgesellschaft: "Handelsgesellschaft Marstonien"
+ ostemeria_marstonien_handelsgesellschaft_desc: "In order to secure their interests in the Mezonian strait, the Ostemer League organzied the Marstonian trading company, which owned many manufactories and outposts across Mezonia and Eglevkuza. With its expansion, it managed to seize the small port of Zyntar, later transforming it into a bustling city, protecting not only the Ostemer enterprise, but also the entire Ostsee from piracy."
+ ostemeria_advanced_banking: "Advanced Banking"
+ ostemeria_advanced_banking_desc: "In order to accomodate quickly growing wealth, many banks started to appear. Originally focused on securing the assets of richest individuals, they quickly started offering loans to less fortunate, allowing them to become the ruling class themselves. Many of Ostemer banks now offer services far outreaching the borders of Ostemeria, working in lands as distant as Ehrenstaat and Ignidunta."
+ ostemeria_equal_under_the_handlerversammlung: "Equal under the Händlerversammlung"
+ ostemeria_equal_under_the_handlerversammlung_desc: "The Händlerversammlung, also known as the merchants' assembly, was created in order to take into consideration concerns and ideas of all merchants in the Ostemer League. The leader of this assembly was often picked from one of the imperial princes, taking the title of 'Silken Prince', showing not only the prestige, but also wealth associated with being the leader of such organisation."
+ ostemer_the_silk_palace: "The Silk Palace"
+ ostemer_the_silk_palace_desc: "The beautifuly decorated palace located near the main city square of Dorschau often serves more functions than just being a home for the Seidenprinz and his family, often being the place where matters between the guilds, the prince and the emperor are discussed in private, most often in the grand hall, inspired by the Zakarturi art and architecture, showing the worldliness and wealth of the prince."
+
+ ostemer_merchants_reform: "Ostemer Plutocracy"
+ ostemer_merchants_reform_desc: "The Ostemer merchants are organized into two major groups of Skenstein and Oelssner guilds, both of which together form the Händlerversammlung - merchants' assembly."
