--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -163,3 +163,6 @@
 
  anzaqan_nation_title: "Unite the Towns @ANZ"
  anzaqan_nation_desc: "Maqhazian people of the northern Sahilan coast always lived from trade and fishing in isolate communities and towns. Now it is the time to unite to stand together in an everchanging world."
+
+ ostemeria_nation_title: "Unite Ostemer Merchants @OST"
+ ostemeria_nation_desc: "While the Ostemers are loosely organized into multiple guilds which often discuss important matters in the merchants' assembly, we still lack a unified national structure. If we finally politicaly unite, we will finally rule the Ostsee on our own."
