--- a/localisation/winds_of_change_l_english.yml
+++ b/localisation/winds_of_change_l_english.yml
@@ -6844,7 +6844,7 @@
  
  MUG_ayutthaya_subah: "Ayutthaya Subah" #PP modifier
  MUG_jain_liberties: "Jain Liberties" #Trade Mod
- MUG_kingmaker_in_the_indian_ocean: "Kingmaker in the Indian Ocean"
+ MUG_kingmaker_in_the_indian_ocean: "Secured Imperial Interests"
  
  MUG_east_1_2: "Modify '§YIncursion into the East§!' by:\n  Governing Capacity: §G+100.00§!\n  Yearly Army Tradition: §G+0.25§!\n  Maximum tolerance of Heathens: §G+1.00§!"
  MUG_merge_west_center_east: "Merge '§YHegemon of the West§!' and '§YIncursion into the East§!' into '§YEmperor of Hindustan§!', modifying it by:\n  Governing Capacity: §G+100.00§!\n  Maximum tolerance of Heathens: §G+1.00§!\n  Manpower in Accepted Culture provinces: §G+10.0%§!"
