minor bjateel loc tweaks

--- a/localisation/TD_01_flavour_bjateel_l_english.yml
+++ b/localisation/TD_01_flavour_bjateel_l_english.yml
@@ -50,25 +50,25 @@
  bjateel_button_3_tt: "§YRegulate visits of forgein Sages§!"
  TD_Regulated_Sage_Visits: "Regulated Sage Visits"
  
- bjateel_before_reform.1.t: "Conflict between rival shrines"
+ bjateel_before_reform.1.t: "Conflict between Rival Shrines"
  bjateel_before_reform.1.desc: "In our effort to codify the central doctrine, a small secluded shrine has provided valuable insight into a lesser-known divine being they were devoted to. Their assistance has been instrumental in codifying the Bjateel faith's mythos and doctrine. However, their efforts have been obstructed by a popular local shrine, which sees our support as a threat to their position. In desperation, they have resorted to bribing the court to halt all aid to the secluded shrine."
- bjateel_before_reform.1.a: "Support the popular shrine"
- bjateel_before_reform.1.b: "Support the secluded shrine"
+ bjateel_before_reform.1.a: "Support the Popular Shrine."
+ bjateel_before_reform.1.b: "Support the Secluded Shrine."
  bjateel_before_reform.2.t: "Celebrations of Festivals"
  bjateel_before_reform.2.desc: "For generations, Bjateel adherents have drifted apart, their differing rituals and doctrines spawned schisms. Now, a grand festival offers a rare chance for unity, bringing together shamans, warriors, and devotees to celebrate our shared faith and strengthen spiritual bonds."
  bjateel_before_reform.2.a: "Let us Rejoice!"
- bjateel_before_reform.3.t: "Foreign Sage spreads foreign faith"
- bjateel_before_reform.3.desc: "A group of foreign sages has taken refuge in our land, spreading their beliefs among our people. Preachers, traders, and mystics have gained followers, weaving their doctrine into the fabric of Bjateel’s faith. Our shamans warn of a growing threat to our spiritual unity, while others see this as a chance to deepen our understanding of the divine.\nIf left unchecked, this sect could alter our faith forever. Will we tolerate their teachings or extinguish this influence before it takes root?"
- bjateel_before_reform.3.a: "So be it"
- bjateel_before_reform.3.b: "Stop him!"
- bjateel_before_reform.4.t: "Shamans discriminate against a new Shrine"
+ bjateel_before_reform.3.t: "Foreign Sage spreads foreign Faith"
+ bjateel_before_reform.3.desc: "A group of foreign sages has taken refuge in our land, spreading their beliefs among our people. Preachers, traders, and mystics have gained followers, weaving their doctrine into the fabric of Bjateel faith. Our shamans warn of a growing threat to our spiritual unity, while others see this as a chance to deepen our understanding of the divine.\nIf left unchecked, this sect could alter our faith forever. Will we tolerate their teachings or extinguish this influence before it takes root?"
+ bjateel_before_reform.3.a: "Let them be."
+ bjateel_before_reform.3.b: "Stop them!"
+ bjateel_before_reform.4.t: "Shamans discriminate against a New Shrine"
  bjateel_before_reform.4.desc: "A new shrine has risen in our lands, championing for the reformation of Bjateel faith. Yet, our established conclave of shaman condemn its doctrine, deeming its rituals heretical. Their open discrimination against this shrine is the source of schism among the Bjateel faithful, impeding our progress toward codification of the faith."
- bjateel_before_reform.4.a: "It's their right to do so"
+ bjateel_before_reform.4.a: "It's their Right to do so."
  bjateel_before_reform.4.b: "Stop them!"
  bjateel_before_reform.5.t: "Theological Debate"
  bjateel_before_reform.5.desc: "At the shamanic convene, a shaman from far-away region sought to cause a rift between the faithful, elevating obscure spirits and exposing shameful truths about our ancestral spirits. Though wise, he clearly opposes reformation—and has swayed the convene to an undesirable outcome.\nNow, we must choose: brand him a heretic and push forward our doctrine, or accept defeat and wait until the schism die down."
- bjateel_before_reform.5.a: "They are kinda right"
- bjateel_before_reform.5.b: "They are wrong"
+ bjateel_before_reform.5.a: "We need to Stand Down this time."
+ bjateel_before_reform.5.b: "Condemn this Heretic."
  
  increase_bjateel_reform_5_tt: "Increase Bjateel Reformation Progress by §Y5%§!."
  increase_bjateel_reform_10_tt: "Increase Bjateel Reformation Progress by §Y10%§!."
