--- a/localisation/TD_01_flavour_bjateel_l_english.yml
+++ b/localisation/TD_01_flavour_bjateel_l_english.yml
@@ -47,18 +47,18 @@
  TD_State_Sanctioned_Shrines: "State Sanctioned Shrines"
  bjateel_button_2_tt: "§YCodify Local Beliefs and Doctrines§!"
  TD_Codified_Beliefs_And_Doctrines: "Codified Beliefs and Doctrines"
- bjateel_button_3_tt: "§YRegulate visits of forgein Sages§!"
+ bjateel_button_3_tt: "§YRegulate Foreign Sages§!"
  TD_Regulated_Sage_Visits: "Regulated Sage Visits"
  
  bjateel_before_reform.1.t: "Conflict Between Rival Shrines"
- bjateel_before_reform.1.desc: "In our effort to codify the central doctrine, a small secluded shrine has provided valuable insight into a lesser-known divine being they were devoted to. Their assistance has been instrumental in codifying the Bjateel faith's mythos and doctrine. However, their efforts have been obstructed by a popular local shrine, which sees our support as a threat to their position. In desperation, they have resorted to bribing the court to halt all aid to the secluded shrine."
+ bjateel_before_reform.1.desc: "In our effort to codify the central doctrine, a small secluded shrine has provided valuable insight into a lesser-known divine being they were devoted to. Their assistance has been instrumental in codifying the Bjateel faith's mythos and doctrine, however their efforts have been obstructed by a popular local shrine, which sees our support as a threat to their position. In desperation, they have resorted to bribing the court to halt all aid to the secluded shrine."
  bjateel_before_reform.1.a: "Support the popular shrine."
  bjateel_before_reform.1.b: "Support the secluded shrine."
  bjateel_before_reform.2.t: "Celebrations of Festivals"
  bjateel_before_reform.2.desc: "For generations, Bjateel adherents have drifted apart, their differing rituals and doctrines spawned schisms. Now, a grand festival offers a rare chance for unity, bringing together shamans, warriors, and devotees to celebrate our shared faith and strengthen spiritual bonds."
  bjateel_before_reform.2.a: "Let us rejoice!"
  bjateel_before_reform.3.t: "Foreign Sage Spreads Foreign Faith"
- bjateel_before_reform.3.desc: "A group of foreign sages has taken refuge in our land, spreading their beliefs among our people. Preachers, traders, and mystics have gained followers, weaving their doctrine into the fabric of Bjateel faith. Our shamans warn of a growing threat to our spiritual unity, while others see this as a chance to deepen our understanding of the divine.\nIf left unchecked, this sect could alter our faith forever. Will we tolerate their teachings or extinguish this influence before it takes root?"
+ bjateel_before_reform.3.desc: "A group of foreign sages has taken a refugee in our land, spreading their beliefs among our people. Preachers, traders, and mystics have gained many followers from across the land, weaving their doctrine into the fabric of Bjateel faith. Our shamans warn of a growing threat to our spiritual unity, while others see this as a chance to deepen our understanding of the divine.\nIf left unchecked, this sect could alter our faith forever. Will we tolerate their teachings or extinguish this influence before it takes root?"
  bjateel_before_reform.3.a: "Let them be."
  bjateel_before_reform.3.b: "Stop them!"
  bjateel_before_reform.4.t: "Shamans Discriminate Against a New Shrine"
