--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -15,7 +15,7 @@
  cak_kecig_northern_warfare_methods: "Northern Warfare Methods"
  cak_kecig_northern_warfare_methods_desc: "Our warfare methods are falling behind. To Keep up, we need to learn from our northern Pemenian neighbours."
  cak_kecig_right_of_conquest: "Right of Conquest"
- cak_kecig_right_of_conquest_desc: "It is our right to rule all of Bkuslcuht, and we will not allow some forgeiners from the east, west nor north, to conquer our land and enslave our people!"
+ cak_kecig_right_of_conquest_desc: "It is our right to rule all of Bkuslcuht, and we will not allow some foreigners from the east, west nor north, to conquer our land and enslave our people!"
  
  bkuslcuht_ideas: "Bkusluchtan Ideas"
  bkuslcuht_ideas_start: "Bkuslcuhtan Traditions"
