--- a/localisation/TD_01_flavour_kabonen_l_english.yml
+++ b/localisation/TD_01_flavour_kabonen_l_english.yml
@@ -16,7 +16,7 @@
  kabonen_beacon_of_western_ideas: "Beacon of Western Ideas"
  kabonen_beacon_of_western_ideas_desc: "After decline of our country after Tarag'nomabgi war, we had to reestablish ties with our western brethren, and after that we learned a lot from them, especially the printing press and the existence of a whole new world."
  kabonen_modernized_ship_design: "Modernized Ship Designs"
- kabonen_modernized_ship_design_desc: "Navy is lifeline of our land, without it, we will cease to exist, crushed by the outside powers. We need to do everything to make sure our ships are best of the best, and to achieve that we will invite forgein ship designers from Mysentria."
+ kabonen_modernized_ship_design_desc: "Navy is lifeline of our land, without it, we will cease to exist, crushed by the outside powers. We need to do everything to make sure our ships are best of the best, and to achieve that we will invite foreign ship designers from Mysentria."
  
  lost_republic_reform: "Lost Republic"
  lost_republic_reform_desc: "The Republic founded by Yermic Mawaqi merchants that lost their way when sailing east to find a new trade route to Hengtua. Seen as a blight of the earth by all of its neighbours."
