--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -64,7 +64,7 @@
  itulan_lummak_connections: "Lummak Connections"
  itulan_lummak_connections_desc: "With close proximity of Lummak Mythology to our lands, and many of our tribesmen converting to it, we started an interfaith exchange with them, which helped us see the world from a new perspective!"
  itulan_modern_diplomacy: "Modern Diplomacy"
- itulan_modern_diplomacy_desc: "If we want to preserve our way of life, and not end up crushed under forgeiners, we need to modernize our diplomacy, so it doesn't fall behind rest of the world."
+ itulan_modern_diplomacy_desc: "If we want to preserve our way of life, and not end up crushed under foreigners, we need to modernize our diplomacy, so it doesn't fall behind rest of the world."
  itulan_advanced_fortifications: "Advanced Fortifications"
  itulan_advanced_fortifications_desc: "With many cases where Hit and Run tactics have failed us, we had to resort to defending ourselves in fortresses and other fortifications. With time, we naturally started picked up art of making better fortifications."
  itulan_second_coming_of_easterners: "Second Coming of Easterners"
