--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -348,3 +348,21 @@
  gajifeng_homeland_of_teamaking_desc: "Tea shrubs, now widely popular across the entire Hengtuand world, have originated in our land. Tea was originally brewed by our secular and spiritual leaders, in order to cleanse the mind of evil thoughts. Thanks to its taste and calming ablities, it spread with our merchants far and wide, with many developing their own drinking and brewing methods, but it was here that it all originated from."
  gajifeng_transyanshan_trade: "Transyanshan Trade"
  gajifeng_transyanshan_trade_desc: "Treacherous Yanshan mountains are often seen as impossible by outsiders to travel, especially in the harshes times of the year, but our people have managed how to trace paths through them, which allow for an all-year-long trade across the highlands. This proved to be beneficial, because we can mantain trade relations, even if our enemies have no way of accessing the market."
+
+ great_shou_ideas: "Shou Ideas"
+ great_shou_ideas_bonus: "Shou Ambition"
+ great_shou_ideas_start: "Shou Traditions"
+ shou_zimahei_empire: "Heng Legacy"
+ shou_zimahei_empire_desc: "While the founders of our dynasty weren't of Henlen origin, they knew that they had to respect the ancient history of the Zimahei. Rituals passed down the tens of generations are not only major part of the lives of the local population due to tradition, but they also bring wisdom build upon centuries of living near the treacherous Zimahei."
+ shou_new_great_cities: "New Great Cities"
+ shou_new_great_cities_desc: "The great cities of the eastern Zimahei have always been of great economic and political importance, protecting local people from various wars and even nomadic raids. As the time went by, more people settled the upper portion of the valley, with each subsequent Heng dynasty reaching further west. The seat of emperor in Chuanjing and later development of Ziyun and Beimen have solidified the fact, that the new heartland of the empire is in the west."
+ shou_great_eastern_walls: "The Eastern Walls"
+ shou_great_eastern_walls_desc: "While our natural borders of Yanshan and Ziyun protect us from the west, many places in the south-east lie undefended against the militant Zhuquans of Xun. In order to secure the prosperity of our empire, many cities and their surroundings along the border have been walled to protect our people from these savages."
+ shou_trans_xizhou_trade: "Transxizhou Commerce"
+ shou_trans_xizhou_trade_desc: "The stabilization in the steppe allowed for many major trade routes to be restored, once again connecting Hengtua with the distant ports of the Furmaria and Hestan. Thanks to our control over the major chokepoints and trade nodes, most notably Xishan, Beimen, Bäkälum and Bujian we can set any tarrifs and taxes we want without much strain on our economy."
+ shou_yesutian_legacy: "Yesünian Administration"
+ shou_yesutian_legacy_desc: "While Yesün in some circles has a reputation of a tyrant who razes and raids his own nation, many respect his iron had, which allowed him to build a stable and strong empire, working like a perfectly created clock. Most obvious legacy of his work is his recruitment system, which allowed him to field a large force and defeat the various rebellions across the empire."
+ shou_ganji_system: "Ganji System"
+ shou_ganji_system_desc: "Another policy inherited from the Yesünian times is the Ganji system, influenced by how the Bunelisuli managed to keep their subjects in check. By sending strategic gifts, we can trick our subjects into thinking that our rule isn't that tyrannical after all."
+ shou_hengtuan_hegemony: "Hengtuan Hegemony"
+ shou_hengtuan_hegemony_desc: "Only 4 different states have managed to be sole rulers in the Zimahei, but 3 of those have claimed the mantle of the Heng dynasty. Clinging to that identity prevented any Henlen state to bring unity once again, always bickering about the most rightful successor. We brought not only stability, but also a fresh perspective of power in the region, showing them that you have to build something new instead of longing for the ancient times of prosperity."
