--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -3920,12 +3920,12 @@
  UNIT_DETACH: "§YDetach§!"
  UNIT_ATTACH: "§YAttach§!"
  DIPRELCH_STRAINED_UNION: "Cultural differences in Union"
- ottoman_eastern_carabinier: "Eastern Carabinier"
- ottoman_eastern_carabinierDESCR: "In essence a mounted foot soldier carrying a short musket or rifle also known as a carbine. Their ability to dismount and fight on foot allowed them great flexibility in the battle."
- ottoman_eastern_skirmisher: "Eastern Skirmisher"
- ottoman_eastern_skirmisherDESCR: "Small and flexible cavalry units constantly in motion and specialized in unpremeditated fighting not held back by slower moving infantry and artillery units."
- ottoman_eastern_uhlan: "Eastern Uhlan"
- ottoman_eastern_uhlanDESCR: "A light cavalry unit most often equipped with a lance, pistol or saber. The Uhlans tactical advantage laid in their agility and speed and they were often employed by various European armies"
+ ottoman_visparayan_carabinier: "Eastern Carabinier"
+ ottoman_visparayan_carabinierDESCR: "In essence a mounted foot soldier carrying a short musket or rifle also known as a carbine. Their ability to dismount and fight on foot allowed them great flexibility in the battle."
+ ottoman_eastern_asamanacs: "Eastern Skirmisher"
+ ottoman_eastern_asamanacsDESCR: "Small and flexible cavalry units constantly in motion and specialized in unpremeditated fighting not held back by slower moving infantry and artillery units."
+ ottoman_apaxtaroi_heavy_cavalry: "Eastern Uhlan"
+ ottoman_apaxtaroi_heavy_cavalryDESCR: "A light cavalry unit most often equipped with a lance, pistol or saber. The Uhlans tactical advantage laid in their agility and speed and they were often employed by various European armies"
  SHOGUN_DIPLOMACY: "Since you're the shogun you will take this action as a representative of §Y$EMPEROR$§! and the action will only influence the relation of §Y$EMPEROR$§!."
  Tag: "English"
  CARPET_SIEGE_AREAS: "Areas to Autonomously Siege"
